--- a/app/views/services/_form.html.haml
+++ b/app/views/services/_form.html.haml
@@ -19,19 +19,16 @@
       %div.editor
         %br
         = f.text_area :description, :class => "ckeditor"
+        
   .field
     = f.label :description_fa
     %br
       %div.editor
       = f.text_area :description_fa, :class => "ckeditor"          
+      
   .field
     =f.fields_for :pictures do |picture|  
-      .field        
-        =picture.file_field :image, :class => "hide"
-        =image_tag (picture.object.image.present? ? picture.object.image(:medium) : "missing.png"), :class => "enable_file_select" 
-        =picture.text_area :description, :rows => 3
-        =picture.text_area :description_fa, :rows => 3        
-        =picture.link_to_remove "Remove this task"
+      = render "shared/upload_image_form", :picture => picture
         
     = f.link_to_add "Add a picture", :pictures 
   .actions
