--- a/app/views/shared/_upload_image_form.html.haml
+++ b/app/views/shared/_upload_image_form.html.haml
@@ -1,7 +1,12 @@
-.fields_for :pictures do |picture|  
-  .field        
-    =picture.file_field :image, :class => "hide"
-    =image_tag (picture.object.image.present? ? picture.object.image(:medium) : "missing.png"), :class => "enable_file_select" 
+.field.upload-pic      
+  =picture.file_field :image, :class => "hide"
+  =image_tag (picture.object.image.present? ? picture.object.image(:medium) : "missing.png"), :class => "enable_file_select" 
+  .des-title
+    توضیحات به انگلیسی
     =picture.text_area :description, :rows => 3
+  .des-title
+    توضیحات به فارسی
     =picture.text_area :description_fa, :rows => 3        
-    =picture.link_to_remove "Remove this task"
+  
+  =picture.link_to_remove image_tag ("Delete_Icon.png"), :class => "remove-task"
+.clrear-float
