--- a/app/views/pages/new.html.haml
+++ b/app/views/pages/new.html.haml
@@ -1,5 +1,12 @@
-%h1 New page
+#welcom_pan  
+    %h2 
+      %span
+        Company
+      Page
+    .show-list
+      = render 'form'
+    #quotPan
+    .footer_Link
+      = link_to 'بازگشت', pages_path
 
-= render 'form'
 
-= link_to 'Back', pages_path
