--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,10 +1,11 @@
-#welcom_pan   
-  %h2 
-    %span
-      Company
-    Add Product
-  .show-list
-    = render 'form'
-  #quotPan
-    .footer_Link
-      = link_to 'بازگشت', products_path
+.list-div
+  #welcom_pan   
+    %h2 
+      %span
+        IDM Co
+      Add Product
+    .show-list
+      = render 'form'
+    #quotPan
+      .footer_Link
+        = link_to 'بازگشت', products_path
