--- a/app/views/services/_form.html.haml
+++ b/app/views/services/_form.html.haml
@@ -7,21 +7,21 @@
           %li= msg
 
   .field
-    = f.label "service name"
+    = f.label "عنوان خدمات با انگلیسی"
     = f.text_field :title
   .field
-    = f.label :title_fa
+    = f.label "عنوان خدمات به فارسی"
     = f.text_field :title_fa
  
   .field
-    = f.label  "description" 
+    = f.label  "توضیحات به انگلیسی" 
     %br
       %div.editor
         %br
         = f.text_area :description, :class => "ckeditor"
         
   .field
-    = f.label :description_fa
+    = f.label "توضیحات به فارسی"
     %br
       %div.editor
       = f.text_area :description_fa, :class => "ckeditor"          
@@ -29,8 +29,9 @@
   .field
     =f.fields_for :pictures do |picture|  
       = render "shared/upload_image_form", :picture => picture
-        
-    = f.link_to_add "Add a picture", :pictures 
+  .clrear-float   
+  = f.link_to_add content_tag(:span, "افزودن تصویر"), :pictures, :id => "add_new_picture"
+  
   .actions
     = f.submit 'ثبت', :class => "btn"
     
