--- a/app/views/slides/new.html.haml
+++ b/app/views/slides/new.html.haml
@@ -1,10 +1,13 @@
-%div
-  %div
-    %h1 افزودن تصویر جدید برای اسلایدر
-    .new_form
+.list-div
+  #welcom_pan   
+    %h2 
+      %span
+        IDM Co
+      Add Slider
+    .show-list
       = render 'form'
-
-  .cr
-  .footer_Link
-    = link_to 'بازگشت', slides_path
+      
+    #quotPan
+      .footer_Link
+        = link_to 'بازگشت', slides_path
 
