--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -33,24 +33,29 @@ div {
 }
 
 .field_with_errors {
-  padding: 2px;
-  background-color: red;
+  padding: 1px;
+  
   display: table;
+  
+  input {box-shadow: 5px 5px 5px red; }
 }
 
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
+background:url(pat.png) repeat;
+  float:left;
+  width: 450px; 
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
   h2 {
-    text-align: left;
+    width:95%;
+    text-align: center;
+    letter-spacing:1px;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
+    margin-top:0px;
     font-size: 12px;
-    margin: -7px;
+   
     margin-bottom: 0px;
     background-color: #c00;
     color: #fff;
@@ -58,6 +63,7 @@ div {
   ul li {
     font-size: 12px;
     list-style: square;
+    
   }
 }
 
