--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -2,7 +2,7 @@
   #welcom_pan  
     %h2 
       %span
-        Company
+        IDM Co
       Services List 
     %h3.t= @service.title
     .clrear-float
