--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -27,4 +27,4 @@
       :javascript
         CKEDITOR.replace( 'page_html_fa' );
   .actions
-    = f.submit 'Save'
+    = f.submit 'ثبت', :class => "btn"
