--- a/app/views/pages/new.html.haml
+++ b/app/views/pages/new.html.haml
@@ -1,4 +1,5 @@
-#welcom_pan  
+.list-div
+  #welcom_pan  
     %h2 
       %span
         Company
@@ -6,7 +7,7 @@
     .show-list
       = render 'form'
     #quotPan
-    .footer_Link
-      = link_to 'بازگشت', pages_path
+      .footer_Link
+        = link_to 'بازگشت', pages_path
 
 
