--- a/app/views/slides/_form.html.haml
+++ b/app/views/slides/_form.html.haml
@@ -10,10 +10,10 @@
     .s-upload-img
       = f.file_field :image, :id => "slide_img"    
     .s-description
-      = f.label :dscription
+      = f.label "توضیحات به انگلیسی"
       = f.text_area :description, :id => "slide_des"
     .s-description
-      = f.label :description_fa
+      = f.label "توضیحات به فارسی"
       = f.text_area :description_fa, :id => "slide_des"
   .clrear-float
     
