--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,7 +39,7 @@
   padding: 7px;
   margin-bottom: 10px;
 }
-.list-div {width:85%; margin-top:10px; margin-bottom:20px}
+.list-div {width:85%; margin-top:10px; margin-bottom:20px; margin-left:5%; margin-right:5%;}
 .show-list {margin-top:70px; margin-bottom:20px}
 .show.slider {margin-top:100px; margin-bottom:20px; width:90%}
 .clrear-float {clear:both}
@@ -49,8 +49,7 @@
 .td a div.pro-title {margin-top:20px; text-decoration:none;}
 .tr:hover div.pro-title { background:url(slideBg1.png) repeat-x; color:#fff; } 
 .td:hover a {text-decoration:none;}
-.show-des-en {width:700px; margin-top:60px; text-align:left; float:left;}
-.show-des-fa {width:700px; margin-top:60px; text-align:right; float:right; margin-right:100px}
+.show-des-en {width:100%; margin-top:60px; text-align:right; float:right;}
 
 .total-division {width:100%; background:url(headBg.png) repeat-x; }
  
