--- a/app/views/slides/edit.html.haml
+++ b/app/views/slides/edit.html.haml
@@ -1,46 +1,55 @@
-%h1 Edit Slide
-.form-holder    
-  = form_for @slide, :html => {:multipart => true} do |f| 
-    = image_tag @slide.image.url(:original), :class => "crop cropImage", :height => "360", :width => "950"
-    = f.hidden_field :crop_x
-    = f.hidden_field :crop_y
-    = f.hidden_field :crop_w
-    = f.hidden_field :crop_h
-    .field
-      = f.label :description
-      = f.text_area :description, :cols => '80', :rows => "3", :class => "slide-description"
-    .field
-      = f.label :description_fa
-      = f.text_area :description_fa, :cols => '80', :rows => "3", :class => "slide-description"  
-    .div_btn
-      = f.submit 'update'
-      
-.footer_Link
-  = link_to 'Show', @slide
-  \|
-  = link_to 'Back', slides_path
+.list-div
+  #welcom_pan   
+    %h2 
+      %span
+        IDM Co
+      Edit Slider
+    .show-list
+      .form-holder    
+        = form_for @slide, :html => {:multipart => true} do |f| 
+          = image_tag @slide.image.url(:original), :class => "crop cropImage", :height => "360", :width => "950"
+          = f.hidden_field :crop_x
+          = f.hidden_field :crop_y
+          = f.hidden_field :crop_w
+          = f.hidden_field :crop_h
+          .field
+            .s-description
+              = f.label :description
+              = f.text_area :description, :cols => '80', :rows => "3", :class => "slide-description"
+          
+            .s-description
+              = f.label :description_fa
+              = f.text_area :description_fa, :cols => '80', :rows => "3", :class => "slide-description"  
+          
+          .clrear-float
+          .actions
+            .div_btn
+              = f.submit 'update', :class => "btn"
+    #quotPan
+      .footer_Link
+        = link_to 'بازگشت', slides_path
 
-:javascript
-  $( '.crop' ).each( function () {
-    var image = $( this )
-    , crop  = image
-    .crop( {
-      controls : 'Drag to move, scroll to zoom'
-    } )
-    .on( 'crop', function( event ) {
-      $("#slide_crop_x").val(event.cropX);
-      $("#slide_crop_y").val(event.cropY);  
-      $("#slide_crop_h").val(event.cropH);
-      $("#slide_crop_w").val(event.cropW);
-    })
-    .data('crop');
-      image
-      .on( 'dblclick', $.proxy( crop.zoomIn, crop ) )
-      .on( 'mousewheel', function ( event ) {
-      return event.originalEvent.wheelDelta < 0 ?
-      crop.zoomIn() :
-      crop.zoomOut();
-    } );
-  } );
-      
-    
+      :javascript
+        $( '.crop' ).each( function () {
+          var image = $( this )
+          , crop  = image
+          .crop( {
+            controls : 'Drag to move, scroll to zoom'
+          } )
+          .on( 'crop', function( event ) {
+            $("#slide_crop_x").val(event.cropX);
+            $("#slide_crop_y").val(event.cropY);  
+            $("#slide_crop_h").val(event.cropH);
+            $("#slide_crop_w").val(event.cropW);
+          })
+          .data('crop');
+            image
+            .on( 'dblclick', $.proxy( crop.zoomIn, crop ) )
+            .on( 'mousewheel', function ( event ) {
+            return event.originalEvent.wheelDelta < 0 ?
+            crop.zoomIn() :
+            crop.zoomOut();
+          } );
+        } );
+            
+          
