--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -71,6 +71,8 @@ background:url(pat.png) repeat;
 .image-des-holder {
   position: relative;
   color:#fff;
+  padding:5px;
+  
   top: -40px;  
   background:url(slideBg1.png) repeat-x;
   opacity: 0.7;
