--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,13 @@
-<h1>New user</h1>
+.list-div
+  #welcom_pan   
+    %h2 
+      %span
+        IDM Co
+      Add New Admin
+    .show-list
+      = render 'form' 
+    #quotPan
+      .footer_Link
+        = link_to 'بازگشت',  users_path
 
-<%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
