--- a/app/views/slides/show.html.haml
+++ b/app/views/slides/show.html.haml
@@ -10,7 +10,7 @@
       =raw @slide.description
     #quotPan
       .footer_Link
-        = link_to content_tag("span", "Edit"), edit_slide_path(@slide)
+        = link_to content_tag("span", "اعمال تغییرات"), edit_slide_path(@slide)
         \|
-        = link_to content_tag("span", "Back"), home_path
+        = link_to content_tag("span", "بازگشت"), home_path
     
