--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -8,6 +8,6 @@
       = render 'form' 
     #quotPan
       .footer_Link
-        = link_to 'بازگشت',  users_path
+        = link_to 'بازگشت',  home_path
 
 
