--- a/app/views/slides/index.html.haml
+++ b/app/views/slides/index.html.haml
@@ -4,7 +4,7 @@
       %span
         IDM Co
       Slider
-    .show.slider  
+    .index_slider  
       = render 'home/slider'            
     #quotPan
       = link_to content_tag("span", "Add new image"), new_slide_path, :class => "brochure"
