--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,9 +1,9 @@
 .text-div
   #welcom_pan
     %h2
-      %span> IDM Co
-      Introduction
-    
+      = t("welcom_pan")
+      %span 
+        = t("IDM")         
     %p 
       = t("Introduction")
     
