--- a/app/views/pages/edit.html.haml
+++ b/app/views/pages/edit.html.haml
@@ -1,9 +1,9 @@
-.list-div
-  #welcom_pan   
+..list-div
+  #welcom_pan  
     %h2 
       %span
-        IDM Co
-      Edit Pages
+        = t("IDM_Co")
+      Page
     .show-list
       = render 'form'
     #quotPan
