--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -3,7 +3,7 @@
     %h2 
       %span
         = @page.title
-      IDM Co
+      = t("IDM_Co")      
     %p#notice= notice
     .show-des-en     
       =raw @page.page_html
