--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,9 +1,10 @@
 .list-div
   #welcom_pan   
-    %h2 
+    %h2
+      = t("welcom_pan")
       %span
-        IDM Co
-      Add Product
+        = t("IDM")
+      
     .show-list
       = render 'form'
     #quotPan
