--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -41,10 +41,10 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 
 #welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px;}
 h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
-h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
+h2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
-#welcom_pan p								{width:755px; margin:55px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px}
+#welcom_pan p								{width:755px; margin:70px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px; border-bottom:#c9c9c9 solid 1px; text-align:center}
 #welcom_pan .details p {width:100%; margin:0px}
 #welcom_pan .details {float:right; width:60%; text-align:right; margin-top:10px}
 #welcom_pan .sample-pic {float:right; width:40%; text-align:left; margin-top:10px}
@@ -99,8 +99,10 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #latest ul li a								{width:auto; margin-top:25px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#848484; line-height:24px}
 #latest ul li p								{width:100%; margin-top:16px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c; line-height:16px}	
 
-.foot-logo {float:right; width:25%;  margin-top:0px; height:100px}
-.foot-link {float:right; width:70%;  margin-top:20px}
+.foot-logo { width:100px%;  margin-top:0px; height:80px; text-align:center}
+.foot-logo h6{ margin-right:250px }
+.foot-link { width:100%; padding-top:20px; }
+
 
 #foot										{width:100%; height:153px; float:left; background:url(footBg.png) repeat-x }
 #foot_cen									{width:800px; margin:5px auto 0 auto}
@@ -110,7 +112,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #foot ul li									{width:auto; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:14px; color:#767676; line-height:18px}
 #foot ul li a								{width:auto; float:left; color:inherit}
 #foot ul li.space							{width:auto; float:left; padding:0 6px}
-#foot p										{width:75%; margin-top:10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:14px; color:#767676; line-height:18px; text-align:center}
+#foot p										{width:70%; margin-right:100px; margin-top:10px; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:14px; color:#767676; line-height:18px; text-align:center}
 #foot p	a									{color:inherit}
 
 #service_pan								{width:100%; margin-top:20px; float:left}
