--- a/app/views/pages/new.html.haml
+++ b/app/views/pages/new.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan  
     %h2 
+      = t("Page")
       %span
-        Company
-      Page
+        = t("IDM_Page")
     .show-list
       = render 'form'
     #quotPan
