--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan   
     %h2 
+      = t("Product")
       %span
-        IDM Co
-      Edit Product
+        = t("IDM_Product") 
     .show-list
       = render 'form'
     #quotPan
