--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan   
-    %h2
-      = t("welcom_pan")
+    %h2 
+      = t("Product")
       %span
-        = t("IDM")
+        = t("IDM_Product")
       
     .show-list
       = render 'form'
