--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan  
     %h2 
+      = t("Product")
       %span
-        IDM Co
-      Products List 
+        = t("IDM_Product")
     %h3.t= @product.title
     .clrear-float
     .description                  
