--- a/app/views/services/new.html.haml
+++ b/app/views/services/new.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan   
     %h2 
+      = t("Service")
       %span
-        IDM Co
-      Add Service
+        = t("IDM_Service")
     .show-list
       = render 'form'
     #quotPan
