--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan  
-    %h2 
+     %h2 
+      = t("Service")
       %span
-        IDM Co
-      Services List 
+        = t("IDM_Service")
     %h3.t= @service.title
     .clrear-float
     .description                  
