--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,7 +1,8 @@
 #foot
   #foot_cen
     .foot-logo
-      %h6      
+      %p.h6      
+        IDM Co.Intl
     .foot-link         
       %p
         © Your Copyright Info Here. Designed by:
