--- a/app/views/slides/index.html.haml
+++ b/app/views/slides/index.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan   
     %h2 
+      = t("Slider")
       %span
-        IDM Co
-      Slider
+        = t("IDM_Slider")
     .index_slider  
       = render 'home/slider'            
     #quotPan
