--- a/app/views/slides/new.html.haml
+++ b/app/views/slides/new.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan   
-    %h2 
+    %%h2 
+      = t("Slider")
       %span
-        IDM Co
-      Add Slider
+        = t("IDM_Slider")
     .show-list
       = render 'form'
       
