--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -17,13 +17,13 @@ li											{list-style:none}
 #head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
 #head p.search input.btn					{width:68px; height:21px; float:left; border:0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; text-align:center; cursor:pointer; background:url(searchbtn.png) no-repeat}
 #head p.search input.btn:active				{background-position:2px 2px}
-h1.logo										{width:200px; height:100px; margin-top:5px; margin-left:50px; float:left; background:url(logo.png) no-repeat}
+h1.logo										{width:200px; height:100px; margin-top:5px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
-#head ul									{width:500px; height:30px; margin-top:45px; float:right}
-#head ul li									{width:auto; margin-left:1px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase}
+#head ul									{width:580px;  height:30px; margin-top:53px; float:right;text-align:center}
+#head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
 #head ul li:first-child						{margin:0}
-#head ul li	a,#head ul li a.active			{width:auto; height:42px; padding:0 13px; float:left; color:inherit; background:#252525}
-#head ul li	a:hover,#head ul li a.active	{color:#31a1ff; background:#272727}
+#head ul li	a,#head ul li a.active			{width:110px; height:30px; padding:0 13px; float:left; color:inherit; background:#252525; text-align:center}
+#head ul li	a:hover,#head ul li a.active	{color:#31a1ff; height:30px;background:#272727; text-align:center}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:200px}
 
@@ -100,13 +100,13 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #latest ul li p								{width:100%; margin-top:16px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c; line-height:16px}	
 
 .foot-logo { width:100px%;  margin-top:0px; height:80px; text-align:center}
-.foot-logo h6{ margin-right:250px }
+.foot-logo p.h6{width:100%;text-align:center; margin-right:250px; color:#bcbdc0; font-size:200%; font-style:italic; font-weight:bold;}
 .foot-link { width:100%; padding-top:20px; }
 
 
 #foot										{width:100%; height:153px; float:left; background:url(footBg.png) repeat-x }
 #foot_cen									{width:800px; margin:5px auto 0 auto}
-#foot h6									{width:200px; height:131px; text-indent:-9999px; background:url(logo.png) no-repeat}
+#foot h6									{width:200px; height:131px; text-indent:-9999px; }
 #foot h6 a									{width:100%; height:100%; float:left}
 #foot ul									{float: left; width:400px; margin:11px auto 0 auto}
 #foot ul li									{width:auto; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:14px; color:#767676; line-height:18px}
