--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -7,20 +7,20 @@
           %li= msg
 
   .field
-    = f.label :title
+    = f.label "عنوان صفحه به انگلیسی"
     = f.text_field :title
   .field
-    = f.label :title_fa
+    = f.label "عنوان صفحه به فارسی"
     = f.text_field :title_fa  
   .field
-    = f.label :page_html_en
+    = f.label "توضیحات به انگلیسی"
     %br
       %div.editor
       = f.text_area :page_html, :class => "ckeditor"
       :javascript
         CKEDITOR.replace( 'page_html_en' );
   .field
-    = f.label :page_html_fa
+    = f.label "توضیحات به فارسی"
     %br
       %div.editor
       = f.text_area :page_html_fa, :class => "ckeditor"
