--- a/app/views/pages/edit.html.haml
+++ b/app/views/pages/edit.html.haml
@@ -1,9 +1,9 @@
-..list-div
+.list-div
   #welcom_pan  
     %h2 
+      = t("Page")
       %span
-        = t("IDM_Co")
-      Page
+        = t("IDM_Page")
     .show-list
       = render 'form'
     #quotPan
