--- a/app/views/services/edit.html.haml
+++ b/app/views/services/edit.html.haml
@@ -1,7 +1,12 @@
-%h1 Editing service
+.list-div
+  #welcom_pan   
+    %h2 
+      = t("Service")
+      %span
+        = t("IDM_Service") 
+    .show-list
+      = render 'form'
+    #quotPan
+      .footer_Link
+        = link_to 'بازگشت', services_path
 
-= render 'form'
-
-= link_to 'Show', @service
-\|
-= link_to 'Back', services_path
