add Slider link for Admin

--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -3,9 +3,12 @@
     .head_height
       .head-serach
         -if is_admin?
-          =link_to current_user.name, edit_user_path(current_user)
-          \|
+          =link_to "Slider", Slide
+          =link_to "Pages", Page
+          
+          =link_to current_user.name, edit_user_path(current_user)          
           =link_to "sign out", delete_session_path
+          
         .pull-left
           =link_to (image_tag "en.png", :class => "language-icon"), locale: :en
           =link_to (image_tag "fa.png", :class => "language-icon"), locale: :fa
