--- a/app/views/slides/index.html.haml
+++ b/app/views/slides/index.html.haml
@@ -7,7 +7,7 @@
     .index_slider  
       = render 'home/slider'            
     #quotPan
-      = link_to content_tag("span", "Add new image"), new_slide_path, :class => "brochure"
+      = link_to content_tag("span", "عکس جدید"), new_slide_path, :class => "brochure"
       
 :javascript
   $(".item").first().addClass("active");
