code clean up change ckeditorgem to ckeditor-rails

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -24,5 +24,5 @@
           \|
           = link_to 'بازگشت', products_path
           \|
-          = link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?'}
+          = link_to 'حذف محصول', @product, method: :delete, data: { confirm: 'آیا میخواهید این محصول را حذف کنید?'}
 
