--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -24,4 +24,4 @@
           \|
           = link_to 'بازگشت', services_path
           \|
-          = link_to 'Destroy', @service, method: :delete, data: { confirm: 'Are you sure?'}
+          = link_to 'حذف محصول', @service, method: :delete, data: { confirm: 'آیا میخواهید این خدمات را حذف کنید?'}
