--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -3,7 +3,7 @@ body										{margin:0; background:#151515; font-family:"Trebuchet MS", Arial, 
 *											{margin:0; padding:0}
 a											{outline:0; text-decoration:none}
 img											{border:0}
-h1,h2,h3,h4,h5,h6							{font-weight:normal}
+
 li											{list-style:none}
 
 #head										{width:100%; background:url(headBg.png) repeat-x; }
@@ -19,7 +19,7 @@ li											{list-style:none}
 #head p.search input.btn:active				{background-position:2px 2px}
 h1.logo										{width:200px; height:100px; margin-top:5px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
-#head ul									{width:580px;  height:30px; margin-top:53px; float:right;text-align:center}
+#head ul									{width:580px;  height:30px; margin-top:53px; float:right;text-align:center; margin-right:65px}
 #head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
 #head ul li:first-child						{margin:0}
 #head ul li	a,#head ul li a.active			{width:110px; height:30px; padding:0 13px; float:left; color:inherit; background:#252525; text-align:center}
@@ -33,8 +33,8 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 
 
 #welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px;}
-h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
-h2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
+#welcom_pan h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
+#welcom_pan h2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
 #welcom_pan p								{width:755px; margin:70px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px; border-bottom:#c9c9c9 solid 1px; text-align:center}
@@ -46,12 +46,10 @@ h2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
 #welcom_pan .div_pic .tr {width:25%; float:left; margin-right:10px}
 #welcom_pan	iframe							{margin:37px 0 0 14px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
 #welcom_pan a.enlarg						{width:auto; margin:15px 0 0 14px; float:left; color:#848484}
-#welcom_pan h3								{clear:left}
+#welcom_pan h3								{clear:left; width:auto; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
+#welcom_pan h3 span										{color:#3b3b3b; margin-right:0px}
 #welcom_pan h3.t								{float:right}
 
-
-h3											{width:auto; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
-h3 span										{color:#3b3b3b; margin-right:0px}
 ul#infoPan									{width:80%; float:left; margin-left:5%; margin-right:10%}
 ul#infoPan li								{width:430px; float:left; margin-left:5%; }
 ul#infoPan li:first-child					{margin:0}
