--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -10,8 +10,8 @@
           =link_to "sign out", delete_session_path
           
         .pull-left
-          =link_to (image_tag "en.png", :class => "language-icon"), locale: :en
-          =link_to (image_tag "fa.png", :class => "language-icon"), locale: :fa
+          =link_to (image_tag "en.png", :class => "language-icon", :id => "en"), locale: :en
+          =link_to (image_tag "fa.png", :class => "language-icon", :id => "en"), locale: :fa
         .clrear-float
       #head-menu
         %h1.logo          
