--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -33,22 +33,22 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 
 
 #welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px;}
-#welcom_pan h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
-#welcom_pan h2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
+#welcom_pan h2.heading2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
+#welcom_pan h2.heading2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
-#welcom_pan p								{width:755px; margin:70px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px; border-bottom:#c9c9c9 solid 1px; text-align:center}
+#welcom_pan p								{width:755px; float:left; font-size:12px; color:#4d4d4d; line-height:18px;}
 #welcom_pan .details p {width:100%; margin:0px}
-#welcom_pan .details {float:right; width:60%; text-align:right; margin-top:10px}
+#welcom_pan .details {float:right; width:55%; text-align:right; margin-top:10px; margin-right:10px}
 #welcom_pan .sample-pic {float:right; width:40%; text-align:left; margin-top:10px}
-
+#welcom_pan p.homepage { text-align:center; margin:60px 5px 5px 30px}
 #welcom_pan .div_pic .td {width:90%; margin-right:15px;  text-align:right}
 #welcom_pan .div_pic .tr {width:25%; float:left; margin-right:10px}
 #welcom_pan	iframe							{margin:37px 0 0 14px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
 #welcom_pan a.enlarg						{width:auto; margin:15px 0 0 14px; float:left; color:#848484}
-#welcom_pan h3								{clear:left; width:auto; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
-#welcom_pan h3 span										{color:#3b3b3b; margin-right:0px}
-#welcom_pan h3.t								{float:right}
+#welcom_pan h3.heading3								{clear:left; width:auto; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
+#welcom_pan h3.heading3 span										{color:#3b3b3b; margin-right:0px}
+#welcom_pan h3.t								{float:righ; margin-top:60px; }
 
 ul#infoPan									{width:80%; float:left; margin-left:5%; margin-right:10%}
 ul#infoPan li								{width:430px; float:left; margin-left:5%; }
