--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -71,12 +71,13 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 
 #quotPan input.btn:active					{background-position:1px 1px}
 
-.foot-logo { width:100px%;  margin-top:0px; height:80px; text-align:center}
-.foot-logo p.h6{width:100%;text-align:center; margin-right:250px; color:#bcbdc0; font-size:200%; font-style:italic; font-weight:bold;}
-.foot-link { width:100%; padding-top:20px; }
+.foot-logo { width:70%;  margin-top:0px; height:60px; text-align:center}
+.foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:50px; width:100px; float:right; margin-left:200px; }
+.foot-link { width:100%;}
 
 
-#foot										{width:100%; height:153px; float:left; background:url(footBg.png) repeat-x }
+
+#foot										{width:100%; height:120px; float:left; background:url(footBg.png) repeat-x }
 #foot_cen									{width:800px; margin:5px auto 0 auto}
 #foot h6									{width:200px; height:131px; text-indent:-9999px; }
 #foot h6 a									{width:100%; height:100%; float:left}
