--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -84,4 +84,14 @@ background:url(pat.png) repeat;
     }
   
 }
- 
+
+.en{
+text-align:left;
+direction: ltr;
+}
+
+
+.fa{
+text-align:right;
+direction: rtl;
+}
