--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,5 +1,5 @@
 html{background:#151515}
-body										{margin:0; background:#151515; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif}
+body										{margin:0; background:#151515; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; }
 *											{margin:0; padding:0}
 a											{outline:0; text-decoration:none}
 img											{border:0}
@@ -23,7 +23,7 @@ h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
 #head ul li:first-child						{margin:0}
 #head ul li	a,#head ul li a.active			{width:110px; height:30px; padding:0 13px; float:left; color:inherit; background:#252525; text-align:center}
-#head ul li	a:hover,#head ul li a.active	{color:#31a1ff; height:30px;background:#272727; text-align:center}
+#head ul li	a:hover,#head ul li a.active	{color:#31a1ff; height:30px;background:#272727; text-align:center; text-decoration:none}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:200px}
 
@@ -32,16 +32,16 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 #content_sup								{width:800px; float:left; position:relative}
 
 
-#welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px;}
-#welcom_pan h2.heading2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
+#welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) repeat-x right 8px;}
+#welcom_pan h2.heading2											{width:auto; margin-top:9px; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 #welcom_pan h2.heading2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
-#welcom_pan p								{width:755px; float:left; font-size:12px; color:#4d4d4d; line-height:18px;}
+#welcom_pan p								{width:755px; font-size:12px; color:#4d4d4d; line-height:18px;}
 #welcom_pan .details p {width:100%; margin:0px}
 #welcom_pan .details {float:right; width:55%; text-align:right; margin-top:10px; margin-right:10px}
 #welcom_pan .sample-pic {float:right; width:40%; text-align:left; margin-top:10px}
-#welcom_pan p.homepage { text-align:center; margin:60px 5px 5px 30px}
+#welcom_pan p.homepage {margin:60px 5px 5px 30px}
 #welcom_pan .div_pic .td {width:90%; margin-right:15px;  text-align:right}
 #welcom_pan .div_pic .tr {width:25%; float:left; margin-right:10px}
 #welcom_pan	iframe							{margin:37px 0 0 14px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
@@ -101,6 +101,9 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 .div_pic {margin-top:20px;width:100%;  height:250px; }
 
 .head-serach {width:100%; background:url(headsearch.png) repeat-x}
+.head-serach a#admin-link {color:#5f5f5f; margin-left:10px; width:300px}
+.head-serach a#admin-link:hover {text-decoration:none; color:#31A1FF;background:url(headsearch.png)  no-repeat}
+.head-serach a#admin-link.active {text-decoration:none; color:#31A1FF;background:url(headsearch.png)  no-repeat}
 .head-serach a {color:#31a1ff; margin:2px; }
 .head-serach a:hover {color:#fff;  }
 .pull-left {margin-left :30px; margin-top:5px; height:25px}
@@ -111,6 +114,7 @@ scrollbar-face-color: #336699; scrollbar-3dlight-color: #336699; scrollbar-base-
 scrollbar-track-color: #336699; scrollbar-darkshadow-color: #000; scrollbar-arrow-color: #000;
 scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; height:200px; margin:10px; }
 #head-menu {width:70%; text-align:center; margin-right:150px}
+
 .content1 {width:80%; float:right; margin-right:60px}
 .text-div {width:90%; margin-top:20px; margin-right:20px}
 .title {float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
@@ -127,3 +131,4 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .enable_file_select {width:100px; height:130px; float:right; }
 
 .login-form {float:right}
+
