--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -3,11 +3,14 @@
     .head_height
       .head-serach
         -if is_admin?
-          =link_to "Slider", Slide
-          =link_to "Pages", Page
+          =link_to current_user.name, edit_user_path(current_user), :id => "admin-link", :class => ('active' if current_page?(edit_user_path(current_user)) )
+          =link_to "خروج", delete_session_path, :id => "admin-link", :class => ('active' if current_page?(home_path)) 
           
-          =link_to current_user.name, edit_user_path(current_user)          
-          =link_to "sign out", delete_session_path
+          =link_to "اسلایدر", slides_path, :id => "admin-link", :class => ('active' if current_page?(slides_path))
+          =link_to "صفحه جدید", pages_path, :id => "admin-link", :class => ('active' if current_page?(pages_path))
+          
+            
+          
           
         .pull-left
           =link_to (image_tag "en.png", :class => "language-icon", :id => "en"), locale: :en
