--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,12 +1,12 @@
 .list-div
-  #welcom_pan  
+  #welcom_pan{:class => I18n.locale} 
     %h2.heading2 
       = t("Product")
       %span
         = t("IDM_Product")
     %h3.t= @product.title
     .clrear-float
-    .description                  
+    .description{:class => I18n.locale}                  
       .details
         = raw @product.description    
       .sample-pic=image_tag @product.sample_picture.image(:large)
