--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -1,13 +1,13 @@
 .list-div
-  #welcom_pan   
+  #welcom_pan{:class => I18n.locale}   
     %h2.heading2 
       = t("Service")
       %span
         = t("IDM_Service")
     .show-list
-      .table
+      .table{:class => I18n.locale}
         - @services.each do |service|
-          .tr
+          .tr{:class => I18n.locale}
             .td= link_to content_tag(:div, service.title, :class => "pro-title"), service
             .td= link_to (image_tag service.pictures.first.image(:medium)), service
     -if is_admin?                          
